--- a/users/tlzz_juesha/上号设置/登录配置.ini
+++ b/users/tlzz_juesha/上号设置/登录配置.ini
@@ -1,4 +1,4 @@
-[640]
+[1724]
 服务器=天龙
 账号=moxileiem
 密码={78,48,83,56,81,53,13}
@@ -8,7 +8,7 @@
 账号文件=账号配置1
 账号索引=1
 登录方式=0
-[4952]
+[6204]
 服务器=天龙
 账号=qingkuangtl
 密码={78,48,83,56,81,53,13}
@@ -17,8 +17,8 @@
 密保卡=0
 账号文件=账号配置1
 账号索引=2
-登录方式=1
-[6624]
+登录方式=0
+[4820]
 服务器=天龙
 账号=yiyejiangyou
 密码={78,48,83,56,81,53,13}
@@ -28,7 +28,7 @@
 账号文件=账号配置1
 账号索引=3
 登录方式=0
-[2080]
+[1812]
 服务器=天龙
 账号=tianlongno19
 密码={78,48,83,56,81,53,13}
@@ -38,7 +38,7 @@
 账号文件=账号配置1
 账号索引=4
 登录方式=1
-[9056]
+[7384]
 服务器=天龙
 账号=liumangmj
 密码={78,48,83,56,81,53,13}
@@ -48,7 +48,7 @@
 账号文件=账号配置1
 账号索引=5
 登录方式=1
-[2604]
+[7220]
 服务器=天龙
 账号=youyouem01
 密码={78,48,83,56,81,53,13}
@@ -58,7 +58,17 @@
 账号文件=账号配置1
 账号索引=6
 登录方式=1
-[6268]
+[8788]
+服务器=天龙
+账号=liumangmj
+密码={78,48,83,56,81,53,13}
+后缀=0
+角色位置=0
+密保卡=0
+账号文件=账号配置1
+账号索引=5
+登录方式=0
+[616]
 服务器=天龙
 账号=123_qaz_xx
 密码={12,107,14,119,76,46,88,40,81}
@@ -68,7 +78,7 @@
 账号文件=账号配置1
 账号索引=7
 登录方式=1
-[2548]
+[4888]
 服务器=释放
 账号=276127434
 密码={92,96,15,106,90,63,68,111,12,108}
@@ -78,13 +88,3 @@
 账号文件=账号配置1
 账号索引=8
 登录方式=1
-[1112]
-服务器=释放
-账号=276127434
-密码={92,96,15,106,90,63,68,111,12,108}
-后缀=0
-角色位置=1
-密保卡=0
-账号文件=账号配置1
-账号索引=8
-登录方式=0
