--- a/config/额外配置信息.ini
+++ b/config/额外配置信息.ini
@@ -1,6 +1,6 @@
 [老板号交易设置]
 bjk94=多情的小男人 至若
-lbk11=彩棉 青麻 龙血矿石 真武矿石 翡翠矿石 纫革10级 炼玉10级 龙纹玉灵 麟木箭 丹青 彩虹之箭 九宫盒 丝线3级 染料3级 棉布碎片 秘银碎片 精铁碎片 玄天寒玉 低级宝石合成符 宝石雕琢符3级 五毒珠·元阳 五毒珠·魂武 五毒珠·星眸 绿晶石(1级) 蓝晶石(1级) 黄晶石(1级) 红晶石(1级) 猫眼石(1级) 虎眼石(1级) 石榴石(1级) 月光石(1级) 尖晶石(1级) 祖母绿(1级) 高级药材 珍兽蛋 中级药材 变石(1级) 黄玉(1级) 碧玺(1级) 紫玉(1级) 皓石(1级) 黄宝石(1级) 蓝宝石(1级) 绿宝石(1级) 黑宝石(1级) 红宝石(1级) 缀龙石·元 缀龙石·伤 缀龙石·暴 技能书 玉龙髓 净云水 铸纹血玉 玉华灵泉 鉴定符10级 鉴定书10级 释灵浆 督脉运功典藏
+lbk11=彩棉,青麻,龙血矿石,真武矿石,翡翠矿石,纫革10级,炼玉10级,龙纹玉灵,麟木箭,丹青,彩虹之箭,九宫盒,丝线3级,染料3级,棉布碎片,秘银碎片,精铁碎片,玄天寒玉,低级宝石合成符,宝石雕琢符3级,五毒珠·元阳,五毒珠·魂武,五毒珠·星眸,绿晶石(1级),蓝晶石(1级),黄晶石(1级),红晶石(1级),猫眼石(1级),虎眼石(1级),石榴石(1级),月光石(1级),尖晶石(1级),祖母绿(1级),高级药材,珍兽蛋,中级药材,变石(1级),黄玉(1级),碧玺(1级),紫玉(1级),皓石(1级),黄宝石(1级),蓝宝石(1级),绿宝石(1级),黑宝石(1级),红宝石(1级),缀龙石·元,缀龙石·伤,缀龙石·暴,技能书,玉龙髓,净云水,铸纹血玉,玉华灵泉,鉴定符10级,鉴定书10级,释灵浆,督脉运功典藏,
 [可选销毁]
 玄兵石 玄兵石碎片 铸纹血玉 龙纹玉灵 试炼令牌
 [锦囊取物取装备]
